--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,12 @@
 
             <!-- Zadanie nr 2. Utwórz pola logowania -->
             
-
+            <label for="email">
+              <input class="form__input" type="email" name="email" id="email" placeholder="Wprowadź swój e-mail" required>
+            </label>
+            <label for="password">
+                <input class="form__input" type="password" name="password" id="password" placeholder="Wprowadź hasło" required>
+            </label>
             
 
             <!--  -->
